--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -647,6 +647,14 @@ section {
   margin-bottom: 30px;
 }
 
+.portfolio .portfolio-item :hover{
+  box-shadow: 7px 5px 13px 1px rgba(0,0,0,0.8);
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+
+
 .portfolio #portfolio-flters {
   padding: 0;
   margin: 0 auto 25px auto;
